--- a/CSharp/lab6/Demographic/Demographic.Exec/Demographic.Exec.csproj
+++ b/CSharp/lab6/Demographic/Demographic.Exec/Demographic.Exec.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Demographic.FileOperations\Demographic.FileOperations.csproj" />
+      <ProjectReference Include="..\Demographic\Demographic.csproj" />
+    </ItemGroup>
+
 </Project>
